[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "gunicorn>=24.1.1",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "python-slugify>=8.0.4",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "uvloop>=0.22.1",
]
